src/index.css
@font-face {
  font-family: SebinoSoftRegular;
  src: url("/fonts/Sebino_Soft_Regular.woff2");
}

@font-face {
  font-family: SebinoSoftMedium;
  src: url("/fonts/Sebino_Soft_Medium.woff2");
}

@font-face {
  font-family: Montessori;
  src: url("/fonts/Montesori_Regular.woff2");
}


:root {
  --font-size-small: 0.8rem;
  --font-size-medium: 0.9rem;
  --font-size-regular: 1rem;
  --font-size-large: 1.25rem;
  --font-size-xlarge: 1.5rem;

  --color-primary: #f472b6;
  --color-primary-transparent: #f472b588;
  --color-primary-dark: #b12b70;
  --color-primary-dark-dark: #612e4888;
  --color-secondary: #60a5fa;
  --color-secondary-dark: #458dfa67;
  --color-secondary-dark-dark: #203f6db9;
  --color-white: #fff;
  --color-white-smoke: #d3d3d3;
  --color-grey: #adb5bd;
  --color-grey-dark: #adb5bdad;
  --color-background: #000000;
  --color-background-light: #222121;
  --color-background-transparent: #00000018;
  --color-dark-transparent: #1e283685;
  --color-dark-transparent-dark: #1e283636;

  font-family: "SebinoSoftRegular", sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  height: 100dvh;
  position: relative;
  color: var(--color-white);
  background-color: var(--color-background);
}



#app {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  padding: 1.5em;
}


.glass {
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
}

canvas {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  /* z-index: 1; */
}

#ar-overlay {
  /* padding: 1.5em;
  box-sizing: border-box; */
  /* display: flex; */
  /* flex-direction: column; */
  /* width: 100%; */
  height: 100vh;
  /* justify-content: center; */
  /* align-items: center; */
  z-index: 999;
  position: relative;
}

.xr-button-overlay {
  z-index: 100 !important;
}



/* BACKGROUND */

#backgroundContainer {
  position: relative;
  min-height: 100dvh;
  background-color: var(--color-background);
  overflow: hidden;
  width: 100%;
  display: flex;
  justify-content: center;
}

.circle {
  position: absolute;
  border-radius: 50%;
  pointer-events: none;
  opacity: 0;
  border: 2px solid;
  background: transparent;
  animation: expand 12s ease-in-out infinite;
}

/* .circle-1 {
  border-color: var(--color-primary-transparent);
  width: 80vw;
  height: 80vw;
  top: 5%;
  left: -20%;
  animation-delay: 0s;
} */

.circle-1 {
  border-color: var(--color-primary-transparent);
  width: 80vw;
  height: 80vw;
  top: 5%;
  left: -20%;
  animation-delay: 0s;
}

.circle-2 {
  border-color: var(--color-secondary-dark);
  width: 90vw;
  height: 90vw;
  top: 25%;
  right: -25%;
  animation-delay: -4s;
}

.circle-3 {
  border-color: var(--color-grey-dark);
  width: 100vw;
  height: 100vw;
  bottom: 15%;
  left: -10%;
  animation-delay: -8s;
}

.circle-4 {
  border-color: var(--color-primary-dark);
  width: 70vw;
  height: 70vw;
  top: 45%;
  right: -15%;
  animation-delay: -2s;
}

.circle-5 {
  border-color: var(--color-secondary-dark);
  width: 85vw;
  height: 85vw;
  bottom: 35%;
  left: -30%;
  animation-delay: -6s;
}

.circle-6 {
  border-color: #adb5bdad;
  width: 75vw;
  height: 75vw;
  top: 60%;
  right: -20%;
  animation-delay: -10s;
}

/* Ottimizzazioni per tablet */
@media (min-width: 768px) and (max-width: 1024px) {
  .circle-1 {
    width: 60vw;
    height: 60vw;
  }

  .circle-2 {
    width: 70vw;
    height: 70vw;
  }

  .circle-3 {
    width: 80vw;
    height: 80vw;
  }

  .circle-4 {
    width: 50vw;
    height: 50vw;
  }

  .circle-5 {
    width: 65vw;
    height: 65vw;
  }

  .circle-6 {
    width: 55vw;
    height: 55vw;
  }
}

/* Ottimizzazioni per schermi molto piccoli */
@media (max-width: 320px) {
  .circle {
    border-width: 1px;
  }

  .circle-1 {
    width: 85vw;
    height: 85vw;
  }

  .circle-2 {
    width: 95vw;
    height: 95vw;
  }

  .circle-3 {
    width: 105vw;
    height: 105vw;
  }
}

@keyframes expand {
  0% {
    transform: scale(0.2);
    opacity: 0;
  }

  20% {
    opacity: 0.4;
  }

  50% {
    transform: scale(1);
    opacity: 0.6;
  }

  80% {
    opacity: 0.3;
  }

  100% {
    transform: scale(1.5);
    opacity: 0;
  }
}

